# color-wheel-pro

./: LICENSE  README.md  UserManual.html  package-lock.json  package.json  uxp.config.ts  vite.config.ts
src/: App.tsx  app.css  index.scss  main.tsx
src/api/: photoshop.ts
src/components/: BrushGrid.tsx  BrushList.tsx  CollapsibleSection.tsx  ColorArea.tsx  ColorWheel.tsx  DebugPanel.tsx  GradientSlider.tsx  HueRing.tsx  Properties.tsx  SettingsModal.tsx  SliderRow.tsx  ToolGrid.tsx  WheelIndicators.tsx  WheelToolbar.tsx  WheelToolbar_backup.tsx  icons.ts
src/components/controls/: ColorSwatches.tsx  HexInput.tsx  HistoryPanel.tsx  MixerPanel.tsx  PillButton.tsx  ScratchpadPanel.tsx  SimpleSlider.tsx  controls.scss  index.ts
src/hooks/: useHybridPressure.ts
src/hybrid/: CMakeLists.txt  PressureReader.cpp  UXPAddon.h  build.bat
src/hybrid/win/: bolt-uxp-hybrid.sln  bolt-uxp-hybrid.vcxproj
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/styles/: components.scss  global.scss
src/utils/: bmp.ts  color.ts  i18n.ts
